Rewrite big SQL to Criteria API.